add additional hearing tests